# cloaca

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  alembic.ini  docker-compose.yml  hotspot_observations.csv  main.py  pyproject.toml  render.yaml  sqlc.yaml
.claude/skills/: committing-merging-and-deploying-changes.md  get-it-out-the-door.md  infra.md  render-infra.md
.github/workflows/: test.yml
scripts/: MyEBirdData.csv  lifers.json  migrate_duckdb_to_postgres.py  parse_data.py  watch-ci.sh  watch-deploy.sh
src/cloaca/: __init__.py  main.py  parse.py  phoebe_wrapper.py  types.py
src/cloaca/api/: api.py  get_lifers_by_location.py  get_nearby_observations.py  get_new_lifers_by_region.py  get_popular_hotspots.py  shared.py  upload_lifers_csv.py
src/cloaca/api/bird_calls/: get_audio_file.py  get_bird_call.py  main.py  mcgolrick_data_export.csv
src/cloaca/api/bird_query/: main.py
src/cloaca/data/eBird_regions_and_region_codes_18Apr2023/: subnational1_regions_table.csv
src/cloaca/db/: build_parsed_db.py  db.py  ducks.py  popular_hotspots.py
src/cloaca/parsing/: parse_ebird_personal_export.py  parse_ebird_regional_list.py  parsing_helpers.py
src/cloaca/patch_stats/: main.py
src/cloaca/piper/: CLAUDE.md  bird_query.py  birdcast.py  cli.py  db_pool.py  dry_run.py  main.py  rare_bird_alert.py  year_lifers.py  year_list_sync.py
src/cloaca/piper/alembic/: env.py
src/cloaca/piper/data/: aba_codes.csv
src/cloaca/piper/db/: models.py  queries.py
src/cloaca/piper/sql/: queries.sql  schema.sql
src/cloaca/scripts/: compute_patch_stats.py  fetch_yearly_hotspot_data.py
src/cloaca/swan_lake/queries/: best_places_for_phoebes.sql  create_and_sort_db_from_tsv.sql  fetch_bird_call_list_for_locale.sql  read_tsv_into_parquet.sql  (+4 more)
tests/: test_parse.py
tests/api/: test_get_lifers_by_location.py  test_get_nearby_observations.py  test_get_new_lifers_by_region.py  test_get_popular_hotspots.py  test_shared.py
tests/data/: create_test_data.sh  test_input.db  test_parsed.db
tests/db/: test_build_parsed_db.py  test_popular_hotspots.py  test_popular_hotspots_integration.py
tests/parsing/: test_parse.py  test_parse_ebird_regional_list.py
tests/piper/: conftest.py  test_birdcast.py  test_main.py  test_rare_bird_alert.py  test_year_lifers.py
tests/piper/fixtures/: ebird_L2987624_alltime.html  ebird_L2987624_year.html  forecast_2026_04_12.json  livemigration_2026_04_11.json
tests/scripts/: test_compute_patch_stats.py  test_fetch_yearly_hotspot_data.py
tests/test_data/: MyEBirdData.csv
(+12 files in other folders)
