[project]
name = "cloaca"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "David Meadows", email = "dtmeadows@stainlessapi.com" }
]
dependencies = [
    "pandas>=2.2.3",
    "fastapi[standard]>=0.115.0",
    "phoebe-bird>=0.1.0a2",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/cloaca"]
