[project]
name = "cloaca"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "David Meadows", email = "dtmeadows@stainlessapi.com" }
]
dependencies = [
    "pandas>=3.0.2",
    "fastapi[standard]>=0.135.3",
    "phoebe-bird>=0.1.0a12",
    "pyright>=1.1.408",
    "uvicorn>=0.44.0",
    "python-multipart>=0.0.26",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "pytest-recording>=0.13.4",
    "fastapi-utilities>=0.3.1",
    "duckdb>=1.5.2",
    "tabulate>=0.10.0",
    "openai>=2.31.0",
    "twilio>=9.10.5",
    "anthropic[mcp]>=0.94.1",
    "discord-py>=2.7.1",
    "aiohttp>=3.13.5",
    "asyncpg>=0.31.0",
    "alembic>=1.18.4",
    "sqlalchemy[asyncio]>=2.0.49",
    "psycopg2-binary>=2.9.11",
]
readme = "README.md"
requires-python = ">= 3.11"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "testcontainers[postgres]>=4.14.2",
]

[dependency-groups]
dev = [
    "testcontainers[postgres]>=4.14.2",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/cloaca"]
